@@ -5,6 +5,7 @@ Contract Configurator 0.4.0
 - Added Facility requirement - requires that a player has a facility upgraded to a specified level.
 - Added SCANsatCoverage parameter and requirement (big thanks @tattagreis on the SCANsat integration).
 - Fixed a bug in the HasPart parameter for parts with an underscore in the name (thanks @tattagreis).
+- Improved HasCrew now errors if minCrew > maxCrew (thanks @tattagreis).
 
 Contract Configurator 0.3.3
 - Persistant data store can now store config nodes.
